--- a/http_test/rebar.config
+++ b/http_test/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [{mysql, ".*", {git, "https://github.com/mysql-otp/mysql-otp",
+                {tag, "1.7.0"}}}
+                ]}.
 
 {shell, [
   % {config, "config/sys.config"},
